--- a/WebApplication6/Views/Shared/_Layout.cshtml
+++ b/WebApplication6/Views/Shared/_Layout.cshtml
@@ -1,11 +1,34 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+
+    @*<script src="/node_modules/core-js/client/shim.js"></script>
+    <script src="/node_modules/zone.js/dist/zone.js"></script>
+    <script src="/node_modules/systemjs/dist/system.src.js"></script>
+    <script src="/system.config.js"></script>
+    <script>
+        System.import("app").then(null, console.error.bind(console));
+    </script>*@
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
+    <base href="/">
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+
+    <!-- Polyfills -->
+    <script src="node_modules/core-js/client/shim.min.js"></script>
+    <script src="node_modules/zone.js/dist/zone.js"></script>
+    <script src="node_modules/systemjs/dist/system.src.js"></script>
+    <script src="systemjs.config.js"></script>
+    <script>
+      System.import('main.js').catch(function(err){ console.error(err); });
+    </script>
+
+
+
+   
 
 </head>
 <body>
