--- a/WebApplication6/Views/Home/Index.cshtml
+++ b/WebApplication6/Views/Home/Index.cshtml
@@ -3,9 +3,9 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Simple Metered Fare</h1>
+    <p class="lead">This is the Metered fare calculator. The entry fee is $3 and the NY tax is $0.5 per ride.</p>
+    <h6>(The fare varies due to peak time which is Monday-Friday from 4pm to 8pm.)</h6>
 </div>
 
 <div class="row">
